--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -3,7 +3,7 @@
     --secondary-color: #FAFAFA;
     --color--white: #ffffff;
     --text-color: #373737;
-    --button-color: #317FE5;
+    --button-color: #4d94f2;
     --button-text-color: #fafafa;
 }
 
@@ -29,18 +29,15 @@ main{
     width: 100%;
     height: 100vh;
     padding: 0 8em;
-    background-color: burlywood;
 }
 
 .left-container {
     width: 25%;
     height: 100vh;
-    background-color: violet;
 }
 
 .logo {
     display: flex;
-    background-color: yellow;
     margin: 1.5em 0;
 }
 
@@ -57,7 +54,6 @@ main{
 }
 
 .menu {
-    background-color: red;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -85,9 +81,18 @@ main{
     margin-right: 1em
 }
 
+#logout {
+    color: red
+}
+
+#logout:hover {
+    background-color: red;
+    color: #fff;
+}
+
 .right-container {
     width: 75%;
-    background-color: blueviolet;
+    background-color: #deecff;
     margin: 5px;
     border-radius: 15px;
     padding: 0 2em;
@@ -128,28 +133,50 @@ main{
     position: absolute;
     width: 7px;
     height: 7px;
-    background-color: red;
     border-radius: 50%;
     right: 0;
-    top: -2px
+    top: -2px;
+    background-color: red;
+}
+
+.account-section {
+    gap: 1.5em;
+    display: flex;
+    justify-content: space-between;
 }
 
 .account-balance {
-    width: 50%;
+    width: 100%;
     height: 29vh;
-    background-color: aqua;
     border-radius: 15px;
     align-items: end;
     display: flex;
     justify-content: space-between;
     padding: 1em 1.5em;
     color: var(--button-text-color);
-    
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.327);
+    background-color: #317FE5;
+    box-shadow: 0px 2px 6px rgba(55, 55, 55, 0.227);
 }
 
-.account-balance img {
+.account-section .mid {
+    width: 100%;
+    height: 29vh;
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px;
+    align-content: end;
+    padding: 1em 1.5em;
+    box-shadow: 0 2px 6px rgba(55, 55, 55, 0.227);
+
+}
+
+.account-balance img,
+.mid img {
     width: 30px;
+    color: red
+}
+
+.mid img {
+    color: var(--text-color)
 }
 
 .account-balance i {
@@ -160,15 +187,8 @@ main{
     display: flex;
 }
 
-.account-section .mid {
-    width: 20%;
-    height: 29vh;
-    background-color: brown;
-}
-
 .card {
     display: flex;
-    background-color: blue;
     margin-top: 2em;
     gap: 1.5em;
     padding: 0.5em 0 0;
@@ -183,15 +203,15 @@ main{
     height: 15vh;
     padding: 1em 2em;
     border-radius: 10px;
-    background-color: tomato;
-     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.257);
-   
+    background-color: #fff;
+     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.157);
 }
 
 .card .transfer:hover,
 .card .withdraw:hover,
 .card .deposit:hover {
-     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.5);
+     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+     transition: all ease .4s;
 }
 
 .card .transfer::after {
@@ -251,7 +271,7 @@ main{
 }
 
 table {
-    background-color: azure;
+    background-color: #fff;
     width: 100%;
     border-collapse: collapse;
     font-size: 15px;
@@ -259,10 +279,10 @@ table {
 }
 
 table th {
-    background-color: rgba(204, 204, 204, 0.34)
+    background-color: #fff
 }
 
-table tr:nth-child(even) {
+table tr:nth-child(odd) {
     background-color: #d3e6ff83;
 }
 
