--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -204,7 +204,8 @@ main{
     padding: 1em 2em;
     border-radius: 10px;
     background-color: #fff;
-     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.157);
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.157);
+    cursor: pointer;
 }
 
 .card .transfer:hover,
@@ -291,4 +292,8 @@ table td {
     border: none;
     padding: 11px 16px;
     text-align: left;
+}
+
+i {
+    font-size: 1.2em
 }
