--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -165,7 +165,7 @@ main{
     border-radius: 15px;
     align-content: end;
     padding: 1em 1.5em;
-    box-shadow: 0 2px 6px rgba(55, 55, 55, 0.227);
+    box-shadow: 0 2px 6px rgba(55, 55, 55, 0.100);
 
 }
 
@@ -189,13 +189,13 @@ main{
 
 .card {
     display: flex;
-    margin-top: 2em;
+    margin: 3em 0;
     gap: 1.5em;
     padding: 0.5em 0 0;
 }
 
 .card .transfer,
-.card .withdraw,
+.card .bill-payment,
 .card .deposit {
     position: relative;
     display: flex;
@@ -204,12 +204,12 @@ main{
     padding: 1em 2em;
     border-radius: 10px;
     background-color: #fff;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.157);
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.100);
     cursor: pointer;
 }
 
 .card .transfer:hover,
-.card .withdraw:hover,
+.card .bill-payment:hover,
 .card .deposit:hover {
      box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
      transition: all ease .4s;
@@ -225,7 +225,7 @@ main{
     left: 0;
     border-radius: 0 7px 7px 0;   
 }
-.card .withdraw::after {
+.card .bill-payment::after {
     content: '';
     position: absolute;
     width: 11px;
