--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -62,15 +62,20 @@ main{
 
 .menu ul li{
     list-style-type: none;
-    color: var(--text-color);
-    padding: 10px 1.5em ;
     width: 90%;
     margin: 0.7em 0;
-    border-radius: 8px;
-    cursor: pointer;
 }
 
-.menu ul li:hover {
+.menu ul li a {
+    color: var(--text-color);
+    padding: 10px 1.5em ;
+    text-decoration: none;
+    border-radius: 8px;
+    display: inline-block;
+    width: 100%
+}
+
+.menu ul li a:hover {
     background-color: var(--button-color);
     color: white;
     transition: all ease-in-out .3s;
@@ -206,6 +211,11 @@ main{
     background-color: #fff;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.100);
     cursor: pointer;
+}
+
+.card a {
+    text-decoration: none;
+    color: var(--text-color);
 }
 
 .card .transfer:hover,
